NetBSD Problem Report #41525

From www@NetBSD.org  Tue Jun  2 16:11:19 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 1D45663B88A
	for <gnats-bugs@gnats.netbsd.org>; Tue,  2 Jun 2009 16:11:19 +0000 (UTC)
Message-Id: <20090602161118.BB9A863B11D@www.NetBSD.org>
Date: Tue,  2 Jun 2009 16:11:18 +0000 (UTC)
From: aran@100acres.us
Reply-To: aran@100acres.us
To: gnats-bugs@NetBSD.org
Subject: vge0 watchdog timout
X-Send-Pr-Version: www-1.0

>Number:         41525
>Category:       kern
>Synopsis:       vge0 watchdog timout
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Jun 02 16:15:00 +0000 2009
>Closed-Date:    Fri Oct 18 03:02:00 +0000 2019
>Last-Modified:  Fri Oct 18 03:02:00 +0000 2019
>Originator:     Aran Clauson
>Release:        5.99.12
>Organization:
>Environment:
NetBSD piglet 5.99.12 NetBSD 5.99.12 (GENERIC) ... i386
>Description:
On a Via Artigo A-2000 the built-in NIC is described as a VIA VT-6130 by the documentation, but is identified as a VT-6122 by the system.  The vge drive attaches to the device.  I can get an IP address with dhclient, but I can neither send nor receive data.  Using dmesg, I see "vge0: watchdog timeout" every 5-8 seconds.
>How-To-Repeat:
Boot, dhclient, tellnet.
>Fix:

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->feedback
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Sun, 16 Jan 2011 17:12:18 +0900
State-Changed-Why:
Could you try the following patch?
ftp://ftp.netbsd.org/pub/NetBSD/misc/nonaka/misc/20090208-nbsd-sys-dev-pci-vge.diff


From: David Holland <dholland-bugs@netbsd.org>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/41525: vge0 watchdog timeout
Date: Mon, 7 Feb 2011 02:18:29 +0000

 Gnats decided the feedback mail was a new improperly-formatted PR and
 creatively mangled it. This is as close as I can figure what the
 original message probably was:

    ------

 From: Aran Clauson <aran@100acres.us>
 To: gnats-bugs@netbsd.org
 Subject: Re: kernel/41525 (pending)
 Date: Sun,  6 Feb 2011 20:55:00 +0000 (UTC)

 Tested and vge0 works find under NetBSD 5.99.44


State-Changed-From-To: feedback->open
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 14 Aug 2011 20:08:17 +0000
State-Changed-Why:
Can we get the patch committed?


From: "SAITOH Masanobu" <msaitoh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41525 CVS commit: src/sys/dev/pci
Date: Tue, 8 Oct 2019 14:26:27 +0000

 Module Name:	src
 Committed By:	msaitoh
 Date:		Tue Oct  8 14:26:27 UTC 2019

 Modified Files:
 	src/sys/dev/pci: if_vge.c if_vgereg.h

 Log Message:
  Copy vge_clrwol() from FreeBSD and call it in vge_attach() to recover from
 powerdown mode. Fixes PR kern/41525 reported by Aran Clauson.


 To generate a diff of this commit:
 cvs rdiff -u -r1.74 -r1.75 src/sys/dev/pci/if_vge.c
 cvs rdiff -u -r1.4 -r1.5 src/sys/dev/pci/if_vgereg.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41525 CVS commit: [netbsd-8] src/sys/dev/pci
Date: Thu, 17 Oct 2019 18:27:36 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Thu Oct 17 18:27:36 UTC 2019

 Modified Files:
 	src/sys/dev/pci [netbsd-8]: if_vge.c if_vgereg.h

 Log Message:
 Pull up following revision(s) (requested by msaitoh in ticket #1406):

 	sys/dev/pci/if_vgereg.h: revision 1.5
 	sys/dev/pci/if_vge.c: revision 1.75

 Copy vge_clrwol() from FreeBSD and call it in vge_attach() to recover from
 powerdown mode. Fixes PR kern/41525 reported by Aran Clauson.


 To generate a diff of this commit:
 cvs rdiff -u -r1.60.8.2 -r1.60.8.3 src/sys/dev/pci/if_vge.c
 cvs rdiff -u -r1.3 -r1.3.134.1 src/sys/dev/pci/if_vgereg.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41525 CVS commit: [netbsd-9] src/sys/dev/pci
Date: Thu, 17 Oct 2019 18:58:34 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Thu Oct 17 18:58:33 UTC 2019

 Modified Files:
 	src/sys/dev/pci [netbsd-9]: if_vge.c if_vgereg.h

 Log Message:
 Pull up following revision(s) (requested by msaitoh in ticket #345):

 	sys/dev/pci/if_vgereg.h: revision 1.5
 	sys/dev/pci/if_vge.c: revision 1.75

 Copy vge_clrwol() from FreeBSD and call it in vge_attach() to recover from
 powerdown mode. Fixes PR kern/41525 reported by Aran Clauson.


 To generate a diff of this commit:
 cvs rdiff -u -r1.73 -r1.73.2.1 src/sys/dev/pci/if_vge.c
 cvs rdiff -u -r1.4 -r1.4.2.1 src/sys/dev/pci/if_vgereg.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: msaitoh@NetBSD.org
State-Changed-When: Fri, 18 Oct 2019 03:02:00 +0000
State-Changed-Why:
Fixed. Thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.